--- a/agroghala-final/package.json
+++ b/agroghala-final/package.json
@@ -9,9 +9,12 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
